--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,1 +1,37 @@
-
+<!DOCTYPE html>
+<html lang="eo">
+<head>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>amstram.be</title>
+<style>
+*{
+  padding:0;
+  margin:0;
+}
+canvas{
+  position:absolute;
+  width:100%;
+  height:100vh;
+}
+form{
+  position:absolute;
+  z-index: 2;
+  width:90%;
+  top:33%;
+  left:5%;
+}
+input{
+  border:1px solid red;
+  width:100%;
+  height:2em;
+}
+canvas{z-index:1;}
+</style>
+</head>
+<body>
+  <canvas id="c"></canvas>
+  <script src="canvas.js"></script>
+</body>
+</html>
